@@ -21,6 +21,8 @@ qtcreator (2.7.0-1) UNRELEASED; urgency=low
     - Use qtdeclarative5-private-dev, as described in the README.
   * Export CFLAGS, CXXFLAGS, LDFLAGS for hardening and QT_SELECT to choose qt5.
   * Change Depends and Recommends of packages qtcreator and qtcreator-doc.
+  * Update 02_use_x-terminal-emulator.diff. The changes seems to come from
+    Ubuntu, but I don't know who did it.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Wed, 22 May 2013 15:40:28 -0300
 
